--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,13 @@ h1 {
   font-weight: 900;
 }
 
+h2 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 3rem;
+  line-height: 1.5;
+  font-weight: 900;
+}
+
 .container-fluid {
   padding: 3% 15%;
 }
@@ -61,7 +68,7 @@ p {
   transform: rotate(25deg);
 }
 
-/* Feature */
+/* Feature Section*/
 #features {
   padding-top: 30px;
 }
@@ -78,4 +85,65 @@ p {
 
 .features-icon:hover {
   color: #ff4c68;
+}
+
+/* Testimonial Section */
+
+#testimonials {
+  color: white;
+  background-color: #ef8172;
+  text-align: center;
+}
+
+.testimonial-image {
+  width: 15%;
+  border-radius: 100%;
+  margin: 20px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+/* Press Section */
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 15px;
+}
+
+/* Pricing Section */
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-col {
+  padding: 3% 2%;
+}
+
+/* Call to Action Section */
+#cta {
+  color: white;
+  background-color: #ff4c68;
+  text-align: center;
+}
+
+.action-text {
+  font-family: serif;
+  font-size: 3rem;
+  font-size: normal;
+  padding: 8% 5% 5%;
+}
+
+/* Footer Section*/
+
+#footer {
+  padding: 8%;
+  text-align: center;
 }
