--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,6 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
-#title {
-  background-color: #ff4c68;
-  color: white;
-}
-
 h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 3.5rem;
@@ -63,11 +58,27 @@ p {
 
 /* Title Image */
 
+#title {
+  background-color: #ff4c68;
+  color: white;
+}
+
 .title-image {
   width: 20%;
   transform: rotate(25deg);
   position: absolute;
   right: 23%;
+}
+
+@media (max-width: 993px) {
+  #title {
+    text-align: center;
+  }
+
+  .title-image {
+    transform: rotate(0);
+    position: static;
+  }
 }
 
 /* Feature Section*/
@@ -150,4 +161,8 @@ p {
 #footer {
   padding: 8%;
   text-align: center;
+}
+
+.footer-icons {
+  padding: 1%;
 }
