--- a/css/styles.css
+++ b/css/styles.css
@@ -1,33 +1,40 @@
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", "sans-serif";
+  text-align: center;
 }
 
-h1 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 3.5rem;
-  line-height: 1.5;
-  font-weight: 900;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", "sans-serif";
 }
 
 h2 {
-  font-family: "Montserrat", sans-serif;
   font-size: 3rem;
   line-height: 1.5;
   font-weight: 900;
+}
+
+h3 {
+  padding: 10px;
+  font-weight: bold;
+}
+
+p {
+  color: #8f8f8f;
 }
 
 .container-fluid {
   padding: 3% 15% 7%;
 }
 
-h3 {
-  padding: 10px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: bold;
-}
-
-p {
-  color: #8f8f8f;
+.big-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
+  font-weight: 900;
 }
 
 /* Navigation Bar */
@@ -47,7 +54,7 @@ p {
 
 .nav-link {
   font-size: 1.2rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", "sans-serif";
 }
 
 /* Download Buttons */
@@ -56,11 +63,11 @@ p {
   margin: 5% 3% 5% 0;
 }
 
-/* Title Image */
-
+/* Title section */
 #title {
   color: white;
   background-color: #ff4c68;
+  text-align: left;
 }
 
 .title-image {
@@ -90,7 +97,6 @@ p {
 
 .feature-box {
   padding: 4%;
-  text-align: center;
 }
 
 .features-icon {
@@ -107,7 +113,6 @@ p {
 #testimonials {
   color: white;
   background-color: #ef8172;
-  text-align: center;
 }
 
 .testimonial-image {
@@ -123,7 +128,7 @@ p {
 /* Press Section */
 #press {
   background-color: #ef8172;
-  text-align: center;
+
   padding-bottom: 3%;
 }
 
@@ -135,7 +140,6 @@ p {
 /* Pricing Section */
 #pricing {
   padding: 100px;
-  text-align: center;
 }
 
 .pricing-col {
@@ -147,11 +151,10 @@ p {
   color: white;
   background-color: #ff4c68;
   padding: 7% 15%;
-  text-align: center;
 }
 
 .action-text {
-  font-family: "Montserrat";
+  font-family: "Montserrat", "sans-serif";
   font-size: 3rem;
   font-weight: 900;
   padding: 8% 5% 5%;
@@ -161,7 +164,6 @@ p {
 
 #footer {
   padding: 8%;
-  text-align: center;
 }
 
 .footer-icons {
